modifico css. el index incerto imagen google y elaboro los input,

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="imagen">Imagenes
     </div>
     <div class="imput">
-        <input class="input" type="text">
+        <input class="input" type="text" placeholder="buscar con google">
 
     </div>
     <div class="iniciar">Iniciar secion</div>
@@ -22,18 +22,19 @@
 
 
     <div>
-        <img src="google.mpg" alt=" ">
+
     </div>
     <div class="Gmail">Gmail</div>
-    <div class="buscar">Buscar con</div>
+    <div class="buscar">
+        <input class="input" type="text" placeholder=" Buscar con"> </div>
 
-    <div class="suerte">
-        Me siento con suerte
-    </div>
+    <div class="suerte"> <input class="input" type="text" placeholder="Me siento con suerte"></div>
     <div class="colombia">Colombia</div>
     <div class="publicidad">Publicidad</div>
     <div class="negocios">Negocios</div>
-    <div class="imagenes">Sobre Google</div>
+    <div class="imagenes">
+        <img src="google.jpg" alt="">
+    </div>
     <div class="como">Busqueda</div>
     <div class="preferencias">Preferencias</div>
     <div class="condiciones">Condiciones</div>
